[project]
name = "tabtabtab-sheets-mcp"
version = "1.0.0"
description = "MCP server for AI-powered Google Sheets editing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "TabTabTab", email = "contact@tabtabtab.ai"}
]
keywords = ["mcp", "google-sheets", "ai", "cursor", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://tabtabtab.ai"
Repository = "https://github.com/tabtabtab/tabtabtab-sheets-mcp"
Documentation = "https://github.com/tabtabtab/tabtabtab-sheets-mcp#readme"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tabtabtab_mcp"]

